<resources>
    <string name="app_name">Wallet Wizard App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_any_account_yet">Don\'t Have any Account yet?</string>
    <string name="register_now">Register Now!</string>
    <string name="app_desc_with_appname">Wallet Wizard - Stay in Control, Let Wallet Wizard Monitor Your Finances!</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="cd_bg">RectangleGreenBackground</string>
    <string name="current_balance_title">Your Balance :</string>
    <string name="cd_dl">dottedLineSection</string>
    <string name="add_balance_icon">Add Balance Icon</string>
    <string name="title_transaction_hint">Enter your title transaction...</string>
    <string name="nominal_transaction_hint">Enter nominal transaction...</string>
    <string name="credit_debit_hint">Credit/Debit</string>
    <string name="setting_button">Setting Button</string>
    <string name="user_dummy">User Dummy.</string>
    <string name="hello">Hello,</string>
    <string name="income_title">Income :</string>
    <string name="outcome_title">Outcome :</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="see_more">See More</string>
    <string name="fabutton">FAButton</string>
    <string name="submit_data">Submit Data</string>
    <string name="credit_debit_hint_text">Credit/Debit</string>
    <string name="choose_transaction_type">Choose Transaction Type</string>
    <string name="no_recent_activity_found">No Recent Activity Found!</string>
    <string name="error_occured_when_load_data">Error Occured when load data! :(</string>
    <string name="update_profile_user">Update Profile User</string>
    <string name="right_arrow_icon">Right Arrow Icon</string>
    <string name="top_up_balance">Top Up Balance</string>
    <string name="log_out">Log Out</string>
    <string name="biodata_screen_title">Biodata Screen</string>
    <string name="enter_your_name_biodata">Enter your name...</string>
    <string name="choose_your_currency_biodata">Choose Your Currency</string>
    <string name="rupiah_dolar_biodata">Rupiah/Dolar</string>
    <string name="enter_your_initial_balance">Enter your initial balance...</string>
    <string-array name="transactionType">
        <item>Credit</item>
        <item>Debit</item>
    </string-array>
    <string-array name="currencyType">
        <item>Rupiah</item>
        <item>Dolar</item>
    </string-array>
</resources>