<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:id="@+id/ivRectangleGreenBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen200dp"
        android:contentDescription="@string/cd_bg"
        android:src="@drawable/square_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dimen12dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivUserAvatar"
            android:layout_width="@dimen/dimen60dp"
            android:layout_height="@dimen/dimen60dp"
            android:src="@drawable/blank_avatar"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen18sp" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen20sp"
                android:textStyle="bold"
                tools:text="@string/user_dummy" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivSettingButton"
        android:layout_width="@dimen/dimen30dp"
        android:layout_height="@dimen/dimen30dp"
        android:layout_marginEnd="@dimen/dimen20dp"
        android:contentDescription="@string/setting_button"
        android:src="@drawable/round_settings_24"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen150dp"
        android:layout_marginHorizontal="@dimen/dimen20dp"
        android:layout_marginTop="@dimen/dimen100dp"
        android:backgroundTint="@color/white"
        app:cardElevation="@dimen/dimen8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/greyAccent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen16dp"
                android:text="@string/current_balance_title"
                android:textSize="@dimen/dimen18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCurrentBalanceData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen12dp"
                android:textSize="@dimen/dimen24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="Rp. 0" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen2dp"
                android:layout_marginTop="@dimen/dimen12dp"
                android:contentDescription="@string/cd_dl"
                android:src="@drawable/dotted_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentBalanceData" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="100">

                        <TextView
                            android:id="@+id/tvIncomeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen8dp"
                            android:text="@string/income_title" />

                        <TextView
                            android:id="@+id/tvIncomeData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen4dp"
                            tools:text="Rp.700000" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tvOutcomeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen8dp"
                            android:text="@string/outcome_title" />

                        <TextView
                            android:id="@+id/tvOutcomeData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen4dp"
                            android:layout_marginEnd="@dimen/dimen8dp"
                            tools:text="Rp.100000" />
                    </LinearLayout>


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvRecentActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen16dp"
        android:layout_marginTop="@dimen/dimen16dp"
        android:text="@string/recent_activity"
        android:textSize="@dimen/dimen20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/tvSeeMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen16dp"
        android:text="@string/see_more"
        android:textSize="@dimen/dimen18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvRecentActivityTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRecentActivityTitle" />

    <com.kennyc.view.MultiStateView
        android:id="@+id/multiStateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecentActivityTitle"
        app:msv_emptyView="@layout/empty_recent_activity_view"
        app:msv_errorView="@layout/empty_recent_activity_view"
        app:msv_loadingView="@layout/loading_state_view"
        app:msv_viewState="loading">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistoryTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen16dp"
            tools:itemCount="8"
            tools:listitem="@layout/item_recent_activity" />
    </com.kennyc.view.MultiStateView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabToAddTransactionActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen16dp"
        android:backgroundTint="@color/greenPrimary"
        android:contentDescription="@string/fabutton"
        android:src="@drawable/round_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>